--- a/index.html
+++ b/index.html
@@ -71,46 +71,50 @@
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <nav class="mobile-nav">
-                <ul class="mobile-information-list list">
-                    <li class="mobile-information-item">
-                        <a class="mobile-information-link link" href="./index.html">Студія</a>
-                    </li>
-                    <li class="mobile-information-item">
-                        <a class="mobile-information-link link" href="./portfolio.html">Портфоліо</a>
-                    </li>
-                    <li class="mobile-information-item">
-                        <a class="mobile-information-link link" href="">Контакти</a>
-                    </li>
-                </ul>
-            </nav>
-            <ul class="mobile-contacts-list list">
-                <li class="mobile-contact-item">
-                    <a class="contact-mail mobile-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com
-                    </a>
-                </li>
-                <li class="mobile-contact-item">
-                    <a class="contact-number mobile-number-link link" href="tel:+380961111111">+38 096 111 11 11 </a>
-                </li>
-            </ul>
-            <ul class="mobile-socials-list list">
-                <li class="mobile-socials-item">
-                    <a class="mobile-socials-link link" href="" target="_blank" rel="noopener noreferrer"
-                        aria-label="Instagram">Instagram</a>
-                </li>
-                <li class="mobile-socials-item">
-                    <a class="mobile-socials-link link" href="" target="_blank" rel="noopener noreferrer"
-                        aria-label="Twitter">Twitter</a>
-                </li>
-                <li class="mobile-socials-item">
-                    <a class="mobile-socials-link link" href="" target="_blank" rel="noopener noreferrer"
-                        aria-label="Facebook">Facebook</a>
-                </li>
-                <li class="mobile-socials-item">
-                    <a class="mobile-socials-link link" href="" target="_blank" rel="noopener noreferrer"
-                        aria-label="Linkedin">LinkedIn</a>
-                </li>
-            </ul>
+            <div class="mobile-menu-content">
+                <nav class="mobile-nav">
+                    <ul class="mobile-information-list list">
+                        <li class="mobile-information-item">
+                            <a class="mobile-information-link link" href="./index.html">Студія</a>
+                        </li>
+                        <li class="mobile-information-item">
+                            <a class="mobile-information-link link" href="./portfolio.html">Портфоліо</a>
+                        </li>
+                        <li class="mobile-information-item">
+                            <a class="mobile-information-link link" href="">Контакти</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="mobile-socials">
+                    <ul class="mobile-contacts-list list">
+                        <li class="mobile-contact-item">
+                            <a class="contact-mail mobile-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com
+                            </a>
+                        </li>
+                        <li class="mobile-contact-item">
+                            <a class="contact-number mobile-number-link link" href="tel:+380961111111">+38 096 111 11 11 </a>
+                        </li>
+                    </ul>
+                    <ul class="mobile-socials-list list">
+                        <li class="mobile-socials-item">
+                            <a class="mobile-socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                                aria-label="Instagram">Instagram</a>
+                        </li>
+                        <li class="mobile-socials-item">
+                            <a class="mobile-socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                                aria-label="Twitter">Twitter</a>
+                        </li>
+                        <li class="mobile-socials-item">
+                            <a class="mobile-socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                                aria-label="Facebook">Facebook</a>
+                        </li>
+                        <li class="mobile-socials-item">
+                            <a class="mobile-socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                                aria-label="Linkedin">LinkedIn</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>          
         </div>
  
     </header>
@@ -460,7 +464,7 @@
                     </address>
                 </div>
                 <div class="join">
-                    <h2 class="to-join">приєднуйтесь</h2>
+                    <h2 class="to-join to-join1">приєднуйтесь</h2>
                     <ul class="socials-list list">
                         <li class="socials-item">
                             <a class="socials-link socials-link-dark-theme link" href="" target="_blank" rel="noopener noreferrer"
@@ -496,9 +500,7 @@
                         </li>
                     </ul>
                 </div>
-
-            </div>
-            
+            </div>            
             <div class="join-form-box">
                 <p class="to-join">Підпишіться на розсилку</p>
                 <form class="join-form">
